--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+h1,
+.h1 {
+  @apply text-3xl font-bold md:text-5xl;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+h2,
+.h2 {
+  @apply text-2xl font-semibold md:text-4xl;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+h3,
+.h3 {
+  @apply text-xl font-semibold md:text-3xl;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h4,
+.h4 {
+  @apply text-lg  md:text-2xl;
+}
+h5,
+.h5 {
+  @apply text-base  md:text-xl;
+}
+
+p {
+  @apply text-xs md:text-base leading-relaxed;
 }
